--- a/Html/css/style.css
+++ b/Html/css/style.css
@@ -9,7 +9,8 @@ body {
   background: #f7f7f7;
 }
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -920,88 +921,298 @@ a:hover {
 }
 
 /* Chat widget */
-.conversation-list {
-  list-style: none;
-  height: 332px;
-  padding: 0 7px;
+.chatbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 80vh;
 }
 
-.conversation-list li {
-  margin-bottom: 24px;
+.sidebar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: #fff;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 400px;
+  padding: 0 20px 20px;
+  max-width: 400px;
+  margin-right: 30px;
 }
 
-.conversation-list .chat-avatar {
-  float: left;
-  text-align: center;
-  width: 34px;
-}
-
-.conversation-list .chat-avatar img {
-  border-radius: 100%;
-  width: 100%;
-}
-
-.conversation-list .chat-avatar i {
-  font-size: 12px;
-  font-style: normal;
-}
-
-.conversation-list .ctext-wrap {
-  background: #F3F3F3;
-  display: inline-block;
-  border-radius: 20px 20px 20px 0;
-  padding: 4px 12px;
-  position: relative;
-  min-width: 160px;
-}
-
-.conversation-list .ctext-wrap i {
-  display: block;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 600;
+.sidebar .searchChat {
+  margin: 20px 0;
   position: relative;
 }
 
-.conversation-list .ctext-wrap p {
-  margin: 0;
-  padding-top: 3px;
-}
-
-.conversation-list .ctext-wrap:after {
-  right: 98%;
-  top: 0;
-  border: solid transparent;
-  content: " ";
-  height: 0;
-  width: 0;
+.sidebar .searchChat svg {
   position: absolute;
-  pointer-events: none;
-  border-width: 6px;
-  margin-left: -1px;
+  top: 6px;
+  left: 10px;
 }
 
-.conversation-list .conversation-text {
-  float: left;
-  font-size: 12px;
-  margin-left: 12px;
-  width: 70%;
+.sidebar .searchChat input {
+  border-radius: 30px;
+  background: #F7F7F7;
+  border: none;
+  font-size: 15px;
+  padding-left: 40px;
 }
 
-.conversation-list .odd .chat-avatar {
-  float: right !important;
+.sidebar .list-wrap {
+  width: 100%;
+  overflow: auto;
 }
 
-.conversation-list .odd .conversation-text {
-  float: right !important;
-  margin-right: 12px;
+.sidebar .list-wrap .list {
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 5px;
+  height: 70px;
+  cursor: pointer;
+}
+
+.sidebar .list-wrap .list:hover, .sidebar .list-wrap .list.active {
+  background: #F4F7F9;
+}
+
+.sidebar .list-wrap .list img {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-right: 10px;
+}
+
+.sidebar .list-wrap .list .info {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.sidebar .list-wrap .list .info .user {
+  font-weight: 600;
+  font-size: 15px;
+}
+
+.sidebar .list-wrap .list .info .text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 3px;
+  font-size: 13px;
+}
+
+.sidebar .list-wrap .list .time {
+  margin-right: 5px;
+  margin-left: 5px;
+  font-size: 13px;
+  color: #a9a9a9;
+}
+
+.sidebar .list-wrap .list .count {
+  font-size: 13px;
+  font-weight: 600;
+  background: #A3CF60;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  color: #fff;
+}
+
+.content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.content header {
+  height: 76px;
+  background: #fff;
+  border-bottom: 1px solid #F1F1F3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.content header img {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-right: 10px;
+}
+
+.content header .info {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.content header .info .user {
+  font-weight: 600;
+}
+
+.content header .info .time {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 3px;
+  font-size: 13px;
+}
+
+.content header .open {
+  display: none;
+}
+
+.content header .open a {
+  color: #000;
+  letter-spacing: 3px;
+}
+
+.message-wrap {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 15px;
+  overflow: auto;
+  background: #fff;
+}
+
+.message-wrap::before {
+  content: '';
+  margin-bottom: auto;
+}
+
+.message-wrap .message-list {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  max-width: 70%;
+  margin-bottom: 10px;
+}
+
+.message-wrap .message-list.me {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+}
+
+.message-wrap .message-list.me .msg {
+  background: #A3CF60;
+  color: #fff;
+  border-radius: 20px 20px 0 20px;
+}
+
+.message-wrap .message-list.me .msg p {
+  margin-bottom: 0;
+}
+
+.message-wrap .message-list.me .time {
   text-align: right;
-  width: 70% !important;
 }
 
-.conversation-list .odd .ctext-wrap:after {
-  border-color: transparent;
-  left: 99% !important;
+.message-wrap .message-list .time {
+  text-align: left;
+  color: #999;
+  font-size: 13px;
+}
+
+.message-wrap .message-list .msg {
+  background: #F3F3F3;
+  padding: 10px 13px;
+  border-radius: 20px 20px 20px 0;
+}
+
+.message-wrap .message-list .msg p {
+  margin-bottom: 0;
+}
+
+.message-footer {
+  border-top: 1px solid #f3f3f3;
+  background: #fff;
+  padding: 10px 20px;
+  height: 75px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.message-footer button {
+  border: none;
+  background: #A3CF60;
+  border-radius: 50%;
+  color: #fff;
+  width: 40px;
+  height: 40px;
+}
+
+.message-footer input {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding: 20px 20px 20px 0;
+  border: none;
+  font-size: 15px;
+}
+
+.message-footer .sendfile {
+  width: 40px;
+  height: 40px;
+  position: relative;
+}
+
+.message-footer .sendfile input {
+  opacity: 0;
+  padding: 0;
+  width: 40px;
+  height: 40px;
+  left: 0;
+  position: absolute;
+  top: 0;
+}
+
+.message-footer .sendfile svg {
+  margin-top: 7px;
+  opacity: 0.65;
 }
 
 @media (max-width: 991px) {
@@ -1011,6 +1222,11 @@ a:hover {
   .tabs .nav svg {
     display: block;
     margin: 5px auto;
+  }
+  .sidebar {
+    width: 40%;
+    max-width: 100%;
+    margin-right: 15px;
   }
 }
 
@@ -1035,6 +1251,23 @@ a:hover {
   }
   .titleChart .dropdown {
     margin-top: 13px;
+  }
+  .chatbox {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: auto;
+  }
+  .sidebar {
+    width: 100%;
+    max-width: 100%;
+    max-height: 50vh;
+    margin-bottom: 16px;
+  }
+  .content {
+    padding: 0;
+    max-height: 70vh;
   }
 }
 /*# sourceMappingURL=style.css.map */
