--- a/Html/css/style.scss
+++ b/Html/css/style.scss
@@ -12,9 +12,12 @@ body {
     overflow-x: hidden;
     background: #f7f7f7;
 }
-html, body {
+
+html,
+body {
     height: 100%;
 }
+
 a {
     color: $colorSecondary;
 
@@ -64,6 +67,7 @@ a {
 .grey {
     color: #9E9E9E;
 }
+
 /* side bar */
 #sidebar-wrapper {
     width: 16rem;
@@ -760,7 +764,7 @@ a {
     justify-content: space-between;
     align-items: center;
 
-    .dropdown  {
+    .dropdown {
         min-width: 120px;
 
         width: auto !important;
@@ -769,6 +773,7 @@ a {
             font-size: 14px;
             height: 36px;
         }
+
         li a {
             font-size: 14px;
         }
@@ -783,15 +788,18 @@ a {
     height: 100vh;
     align-items: center;
     justify-content: center;
+
     .background {
         height: 100%;
         position: relative;
+
         img {
             object-fit: cover;
             object-position: center;
             width: 100%;
             height: 100%;
         }
+
         &::before {
             background: rgba(0, 0, 0, 0.15);
             width: 100%;
@@ -802,11 +810,13 @@ a {
             content: '';
         }
     }
+
     .boxLogin {
         max-width: 400px;
         width: 400px;
         margin: auto;
         text-align: center;
+
         h4 {
             font-size: 24px;
             font-weight: bold;
@@ -814,6 +824,7 @@ a {
             color: #000;
             text-transform: uppercase;
         }
+
         input {
             border: none;
             border-radius: 0;
@@ -823,121 +834,272 @@ a {
             width: 100%;
             padding-bottom: 15px;
         }
+
         .fgpass {
             text-decoration: underline;
             font-size: 14px;
         }
+
         button {
             min-width: 165px;
             height: 45px;
         }
     }
+
     @media (max-width: 991px) {
-       display: flex;
-       align-items: center;
-       height: 100%;
-       .background {
-           display: none;
-       }
-       .boxLogin {
-           padding: 20px;
-       }
+        display: flex;
+        align-items: center;
+        height: 100%;
+
+        .background {
+            display: none;
+        }
+
+        .boxLogin {
+            padding: 20px;
+        }
     }
 }
 
 /* Chat widget */
-
-.conversation-list {
-    list-style: none;
-    height: 332px;
-    padding: 0 7px;
-
-    li {
-        margin-bottom: 24px;
-    }
-
-    .chat-avatar {
-        float: left;
-        text-align: center;
-        width: 34px;
-
-        img {
-            border-radius: 100%;
-            width: 100%;
-        }
-
-        i {
-            font-size: 12px;
-            font-style: normal;
-        }
-    }
-
-    .ctext-wrap {
-        background: #F3F3F3;
-        display: inline-block;
-        border-radius: 20px 20px 20px 0;
-        padding: 4px 12px;
+.chatbox {
+    display: flex;
+    height: 80vh;
+}
+.sidebar {
+    display: flex;
+    background: #fff;
+    flex-direction: column;
+    width: 400px;
+    padding: 0 20px 20px;
+    max-width: 400px;
+    margin-right: 30px;
+    .searchChat {
+        margin: 20px 0;
         position: relative;
-        min-width: 160px;
-
-        i {
-            display: block;
-            font-size: 12px;
-            font-style: normal;
-            font-weight: 600;
-            position: relative;
-        }
-
-        p {
-            margin: 0;
-            padding-top: 3px;
-        }
-
-        &:after {
-            right: 98%;
-            top: 0;
-            border: solid transparent;
-            content: " ";
-            height: 0;
-            width: 0;
+        svg {
             position: absolute;
-            pointer-events: none;
-            border-width: 6px;
-            margin-left: -1px;
-
+            top: 6px;
+            left: 10px;
+        }
+        input {
+            border-radius: 30px;
+            background: #F7F7F7;
+            border: none;
+            font-size: 15px;
+            padding-left: 40px;
         }
     }
+   
 
-    .conversation-text {
-        float: left;
-        font-size: 12px;
-        margin-left: 12px;
-        width: 70%;
-    }
+    .list-wrap {
+        width: 100%;
+        overflow: auto;
 
-    .odd {
-        .chat-avatar {
-            float: right !important;
-        }
+        //list
+        .list {
+            background: #fff;
+            display: flex;
+            align-items: center;
+            padding: 5px;
+            height: 70px;
+            cursor: pointer;   
+            &:hover,
+            &.active {
+                background: #F4F7F9;
+            }
 
-        .conversation-text {
-            float: right !important;
-            margin-right: 12px;
-            text-align: right;
-            width: 70% !important;
-        }
+            img {
+                border-radius: 50%;
+                width: 40px;
+                height: 40px;
+                object-fit: cover;
+                margin-right: 10px;
+            }
 
-        .ctext-wrap {
+            //info
+            .info {
+                flex: 1;
 
+                .user {
+                    font-weight: 600;
+                    font-size: 15px;
+                }
 
-            &:after {
-                border-color: transparent;
+                .text {
+                    display: flex;
+                    margin-top: 3px;
+                    font-size: 13px;
+                }
+            }
 
-                left: 99% !important;
+            .time {
+                margin-right: 5px;
+                margin-left: 5px;
+                font-size: 13px;
+                color: #a9a9a9;
+            }
+
+            .count {
+                font-size: 13px;
+                font-weight: 600;
+                background: $colorPrimary;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 24px;
+                height: 24px;
+                border-radius: 50%;
+                color: #fff;
             }
         }
     }
 }
+
+//content
+.content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+
+    //header
+    header {
+        height: 76px;
+        background: #fff;
+        border-bottom: 1px solid #F1F1F3;
+        display: flex;
+        padding: 10px;
+        align-items: center;
+
+        img {
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            object-fit: cover;
+            margin-right: 10px;
+        }
+
+        //info
+        .info {
+            flex: 1;
+
+            .user {
+                font-weight: 600;
+            }
+
+            .time {
+                display: flex;
+                margin-top: 3px;
+                font-size: 13px;
+            }
+        }
+
+        .open {
+            display: none;
+
+            a {
+                color: #000;
+                letter-spacing: 3px;
+            }
+        }
+    }
+}
+
+//message wrap
+.message-wrap {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+    overflow: auto;
+    background: #fff;
+
+    &::before {
+        content: '';
+        margin-bottom: auto;
+    }
+
+    //msg list
+    .message-list {
+        align-self: flex-start;
+        max-width: 70%;
+        margin-bottom: 10px;
+        &.me {
+            align-self: flex-end;
+            
+            .msg {
+                background: $colorPrimary;
+                color: #fff;
+                border-radius: 20px 20px 0 20px;
+                p {
+                    margin-bottom: 0;
+                }
+            }
+            .time {
+                text-align: right;
+            }
+        }
+        .time {
+            text-align: left;
+            color: #999;
+            font-size: 13px;
+        }
+        .msg {
+            background: #F3F3F3;
+            padding: 10px 13px;
+            border-radius: 20px 20px 20px 0;
+            p {
+                margin-bottom: 0;
+            }
+            
+        }
+
+        
+    }
+}
+
+//msg footer
+.message-footer {
+    border-top: 1px solid #f3f3f3;
+    background: #fff;
+    padding: 10px 20px;
+    height: 75px;
+    display: flex;
+    align-items: center;
+    button {
+        border: none;
+        background: $colorPrimary;
+        border-radius: 50%;
+        color: #fff;
+        width: 40px;
+        height: 40px;
+    }
+    input {
+        flex: 1;
+        padding: 20px 20px 20px 0;
+        border: none;
+        font-size: 15px;
+    }
+    .sendfile {
+        width: 40px;
+        height: 40px;
+        position: relative;
+        input {
+            opacity: 0;
+            padding: 0;
+            width: 40px;
+            height: 40px;
+            left: 0;
+            position: absolute;
+            top: 0;
+        }
+        svg {
+            margin-top: 7px;
+            opacity: 0.65;
+        }
+    }
+}
+
 
 @media (max-width: 991px) {
     .tab-content {
@@ -955,7 +1117,11 @@ a {
 
         }
     }
-
+    .sidebar {
+        width: 40%;
+        max-width: 100%;
+        margin-right: 15px;
+    }
 }
 
 
@@ -974,8 +1140,26 @@ a {
 
     .titleChart {
         flex-direction: column;
-        .dropdown  {
+
+        .dropdown {
             margin-top: 13px;
         }
     }
+    .chatbox {
+        flex-direction: column;
+        height: auto;
+    }
+    .sidebar {
+        width: 100%;
+        max-width: 100%;
+        max-height: 50vh;
+        margin-bottom: 16px;
+
+    }
+    .content {
+        padding: 0;
+        max-height: 70vh;
+    }
 }
+
+
