--- a/Html/css/style.css
+++ b/Html/css/style.css
@@ -9,9 +9,16 @@ body {
   background: #f7f7f7;
 }
 
-html,
-body {
+html {
   height: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  position: relative;
+  padding-bottom: 3rem;
+  min-height: 100%;
 }
 
 a {
@@ -386,6 +393,10 @@ a:hover {
   background: #A3CF60;
 }
 
+.status-apr .note {
+  background: #A3CF60;
+}
+
 .status-going {
   color: #F4900E;
 }
@@ -399,6 +410,10 @@ a:hover {
 }
 
 .status-pending::before {
+  background: #2A80F1;
+}
+
+.status-pending .note {
   background: #2A80F1;
 }
 
@@ -925,7 +940,7 @@ a:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 80vh;
+  height: calc(80vh - 1rem);
 }
 
 .sidebar {
@@ -1215,6 +1230,77 @@ a:hover {
   opacity: 0.65;
 }
 
+.about {
+  position: relative;
+  height: calc(100vh - 3rem);
+}
+
+.about::after {
+  background: url("../images/bg-1a.png");
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  opacity: 0.6;
+  background-position: bottom;
+}
+
+.about .box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100%;
+  background: transparent;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  max-width: 400px;
+  margin: auto;
+  padding: 16px;
+  position: relative;
+  z-index: 2;
+  color: #212121;
+}
+
+.about .box img {
+  border-radius: 10px;
+  width: 90px;
+  height: 90px;
+}
+
+.about .box h3 {
+  font-size: 34px;
+  line-height: 1.3;
+  margin-bottom: 10px;
+  margin-top: 15px;
+  color: #212121;
+  font-weight: 600;
+}
+
+.about .box span {
+  display: block;
+  margin-bottom: 10px;
+  opacity: 0.75;
+}
+
+.copyright {
+  position: absolute;
+  bottom: 20px;
+  right: 3%;
+  font-size: 13px;
+}
+
 @media (max-width: 991px) {
   .tab-content .col-sm-12 {
     margin-bottom: 16px;
@@ -1227,6 +1313,9 @@ a:hover {
     width: 40%;
     max-width: 100%;
     margin-right: 15px;
+  }
+  .about {
+    height: calc(80vh - 3rem);
   }
 }
 
