--- a/Html/css/style.scss
+++ b/Html/css/style.scss
@@ -13,11 +13,15 @@ body {
     background: #f7f7f7;
 }
 
-html,
-body {
+html {
     height: 100%;
+    box-sizing: border-box;
 }
-
+body {
+    position: relative;
+    padding-bottom: 3rem;
+    min-height: 100%;
+  }
 a {
     color: $colorSecondary;
 
@@ -375,6 +379,10 @@ a {
     &::before {
         background: $colorPrimary;
     }
+
+    .note {
+        background: $colorPrimary;
+    }
 }
 
 .status-going {
@@ -389,6 +397,10 @@ a {
     color: #2A80F1;
 
     &::before {
+        background: #2A80F1;
+    }
+
+    .note {
         background: #2A80F1;
     }
 }
@@ -864,8 +876,9 @@ a {
 /* Chat widget */
 .chatbox {
     display: flex;
-    height: 80vh;
+    height: calc(80vh - 1rem);
 }
+
 .sidebar {
     display: flex;
     background: #fff;
@@ -874,14 +887,17 @@ a {
     padding: 0 20px 20px;
     max-width: 400px;
     margin-right: 30px;
+
     .searchChat {
         margin: 20px 0;
         position: relative;
+
         svg {
             position: absolute;
             top: 6px;
             left: 10px;
         }
+
         input {
             border-radius: 30px;
             background: #F7F7F7;
@@ -890,7 +906,7 @@ a {
             padding-left: 40px;
         }
     }
-   
+
 
     .list-wrap {
         width: 100%;
@@ -903,7 +919,8 @@ a {
             align-items: center;
             padding: 5px;
             height: 70px;
-            cursor: pointer;   
+            cursor: pointer;
+
             &:hover,
             &.active {
                 background: #F4F7F9;
@@ -1024,37 +1041,43 @@ a {
         align-self: flex-start;
         max-width: 70%;
         margin-bottom: 10px;
+
         &.me {
             align-self: flex-end;
-            
+
             .msg {
                 background: $colorPrimary;
                 color: #fff;
                 border-radius: 20px 20px 0 20px;
+
                 p {
                     margin-bottom: 0;
                 }
             }
+
             .time {
                 text-align: right;
             }
         }
+
         .time {
             text-align: left;
             color: #999;
             font-size: 13px;
         }
+
         .msg {
             background: #F3F3F3;
             padding: 10px 13px;
             border-radius: 20px 20px 20px 0;
+
             p {
                 margin-bottom: 0;
             }
-            
+
         }
 
-        
+
     }
 }
 
@@ -1066,6 +1089,7 @@ a {
     height: 75px;
     display: flex;
     align-items: center;
+
     button {
         border: none;
         background: $colorPrimary;
@@ -1074,16 +1098,19 @@ a {
         width: 40px;
         height: 40px;
     }
+
     input {
         flex: 1;
         padding: 20px 20px 20px 0;
         border: none;
         font-size: 15px;
     }
+
     .sendfile {
         width: 40px;
         height: 40px;
         position: relative;
+
         input {
             opacity: 0;
             padding: 0;
@@ -1093,6 +1120,7 @@ a {
             position: absolute;
             top: 0;
         }
+
         svg {
             margin-top: 7px;
             opacity: 0.65;
@@ -1100,6 +1128,70 @@ a {
     }
 }
 
+.about {
+    position: relative;
+    height: calc(100vh - 3rem);
+
+    &::after {
+        background: url('../images/bg-1a.png');
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        opacity: 0.6;
+        background-position: bottom;
+    }
+
+    .box {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        background: transparent;
+        flex-direction: column;
+        text-align: center;
+        max-width: 400px;
+        margin: auto;
+        padding: 16px;
+        position: relative;
+        z-index: 2;
+        color: #212121;
+
+        img {
+            border-radius: 10px;
+            width: 90px;
+            height: 90px;
+        }
+
+        h3 {
+            font-size: 34px;
+            line-height: 1.3;
+            margin-bottom: 10px;
+            margin-top: 15px;
+            color: #212121;
+            font-weight: 600;
+        }
+
+        span {
+            display: block;
+            margin-bottom: 10px;
+            opacity: 0.75;
+        }
+    }
+
+
+
+}
+
+.copyright {
+    position: absolute;
+    bottom: 20px;
+    right: 3%;
+    font-size: 13px;
+}
 
 @media (max-width: 991px) {
     .tab-content {
@@ -1117,10 +1209,16 @@ a {
 
         }
     }
+
     .sidebar {
         width: 40%;
         max-width: 100%;
         margin-right: 15px;
+    }
+
+    .about {
+
+        height: calc(80vh - 3rem);
     }
 }
 
@@ -1145,10 +1243,12 @@ a {
             margin-top: 13px;
         }
     }
+
     .chatbox {
         flex-direction: column;
         height: auto;
     }
+
     .sidebar {
         width: 100%;
         max-width: 100%;
@@ -1156,10 +1256,9 @@ a {
         margin-bottom: 16px;
 
     }
+
     .content {
         padding: 0;
         max-height: 70vh;
     }
 }
-
-
